retrieve the external port from within the container

--- a/services/dy-3dvis/docker-compose.devel.yml
+++ b/services/dy-3dvis/docker-compose.devel.yml
@@ -18,6 +18,7 @@ services:
       - minio
     volumes: 
       - ./simcoreparaviewweb/input-retriever.py:/home/root/input-retriever.py
+      - ./simcoreparaviewweb/external-port-retriever.py:/home/root/external-port-retriever.py
       - ../../packages/simcore-sdk/src:/home/root/packages/packages/simcore-sdk/src
       - ../../packages/s3wrapper/src:/home/root/packages/packages/s3wrapper/src
       - ./test-data:/home/root/test-data
