--- a/services/dy-3dvis/simcoreparaviewweb/Dockerfile
+++ b/services/dy-3dvis/simcoreparaviewweb/Dockerfile
@@ -53,22 +53,22 @@ LABEL simcore.service.bootsettings='[{"name": "entry_point", "type": "string", "
 ARG PORT
 ENV SERVER_PORT=$PORT
 
-COPY boot.sh boot.sh
-RUN chmod +x boot.sh
-COPY apachePatch.sh apachePatch.sh
-RUN chmod +x apachePatch.sh
-
+COPY scripts/boot.sh scripts/boot.sh
+RUN chmod +x scripts/boot.sh
+COPY config/apache.conf config/apache.conf
+COPY scripts/apachePatch.sh scripts/apachePatch.sh
+RUN chmod +x scripts/apachePatch.sh
+RUN mkdir /home/root/trigger && \
+    chmod 777 /home/root/trigger
 #------------------------------------------
 FROM common as development
-VOLUME /home/scu/packages/packages/simcore-sdk/src \
-    /home/scu/packages/packages/s3wrapper/src
 ENV CREATE_DUMMY_TABLE 1
-ENV USE_CASE_CONFIG_FILE="devel-dbconfiguration.json"
+ENV USE_CASE_CONFIG_FILE="devel/devel-dbconfiguration.json"
 ENV TEST_DATA_PATH="/test-data"
-COPY devel-dbconfiguration.json .
-COPY devel-initconfiguration.py .
+COPY devel/devel-dbconfiguration.json devel/devel-dbconfiguration.json
+COPY devel/devel-initconfiguration.py devel/devel-initconfiguration.py
 # Need to use entrypoint as base image's entrypoint must be overriden
-ENTRYPOINT [ "/bin/bash", "boot.sh" ]
+ENTRYPOINT [ "/bin/bash", "scripts/boot.sh" ]
 #------------------------------------------
 FROM common AS production
 #TODO: will be replaced by pip installs when available
@@ -82,7 +82,8 @@ RUN mkdir packages && \
     echo "packages/s3wrapper/src/s3wrapper/*" >> .git/info/sparse-checkout && \
     git pull --depth=1 origin master
 # copy script to get the inputs inside the local file system
-COPY input-retriever.py input-retriever.py
-COPY external-port-retriever.py external-port-retriever.py
-COPY setport.py setport.py
-ENTRYPOINT [ "/bin/bash", "boot.sh" ]
+COPY src/input-retriever.py src/input-retriever.py
+COPY src/getport.py src/getport.py
+COPY src/setport.py src/setport.py
+RUN chmod +x setport.py
+ENTRYPOINT [ "/bin/bash", "scripts/boot.sh" ]
