producer now calls api to set port if defined in bootsettings labels

--- a/services/dy-3dvis/simcoreparaviewweb/Dockerfile
+++ b/services/dy-3dvis/simcoreparaviewweb/Dockerfile
@@ -47,7 +47,7 @@ LABEL org.label-schema.schema-version="1.0" \
     org.label-schema.vendor="IT'IS foundation"
 # service runtime settings
 LABEL simcore.service.settings='[{"name": "ports", "type": "int", "value": 80}, {"name": "constraints", "type": "string", "value": ["node.platform.os == linux"]}]'
-LABEL simcore.service.bootsettings='[{"name": "entry_point", "type": "string", "value": "visualizer"}]'
+LABEL simcore.service.bootsettings='[{"name": "entry_point", "type": "string", "value": "visualizer"}, {"name": "published_port", "type": "string", "value": "setport"}]'
 
 # copy start script
 ARG PORT
@@ -85,5 +85,4 @@ RUN mkdir packages && \
 COPY src/input-retriever.py src/input-retriever.py
 COPY src/getport.py src/getport.py
 COPY src/setport.py src/setport.py
-RUN chmod +x setport.py
 ENTRYPOINT [ "/bin/bash", "scripts/boot.sh" ]
