--- a/services/web/client/source/resource/qxapp/project-v0.0.1.json
+++ b/services/web/client/source/resource/qxapp/project-v0.0.1.json
@@ -80,7 +80,7 @@
           "additionalProperties": false,
           "required": [
             "key",
-            "tag",
+            "version",
             "position"
           ],
           "properties": {
@@ -93,7 +93,7 @@
                 "service/dynamic/3dviewer"
               ]
             },
-            "tag": {
+            "version": {
               "type": "string",
               "description": "semantic version number of the node",
               "pattern": "^(0|[1-9]\\d*)(\\.(0|[1-9]\\d*)){2}(-(0|[1-9]\\d*|\\d*[-a-zA-Z][-\\da-zA-Z]*)(\\.(0|[1-9]\\d*|\\d*[-a-zA-Z][-\\da-zA-Z]*))*)?(\\+[-\\da-zA-Z]+(\\.[-\\da-zA-Z-]+)*)?$",
