--- a/services/dy-3dvis/docker-compose.yml
+++ b/services/dy-3dvis/docker-compose.yml
@@ -16,7 +16,7 @@ services:
         io.simcore.description: '{"description": "Paraview Web-based Visualizer"}'
         io.simcore.contact: '{"contact": "anderegg@itis.ethz.ch"}'
         io.simcore.authors: '{"authors": [{"name": "Sylvain Anderegg", "email": "anderegg@itis.ethz.ch", "affiliation": "ITIS Foundation"}]}'
-        io.simcore.inputs: '{"inputs": [{"key": "in1", "label": "some 3D dataset", "desc": "A mesh, volume data", "type": "file-url", "value": "null"}, {"key": "in2", "label": "some 3D dataset", "desc": "A mesh, volume data", "type": "file-url", "value": "null"}]}'
+        io.simcore.inputs: '{"inputs": [{"key": "A", "label": "some 3D dataset", "desc": "A mesh, volume data", "type": "file-url", "value": "null"}, {"key": "B", "label": "some 3D dataset", "desc": "A mesh, volume data", "type": "file-url", "value": "null"}]}'
         io.simcore.viewer: '{"viewer":{"ip":null, "port":null}}'
     ports:
       - '8777:80'        
