get settings view to work

--- a/services/web/client/source/resource/qxapp/project-v0.0.1.json
+++ b/services/web/client/source/resource/qxapp/project-v0.0.1.json
@@ -127,7 +127,7 @@
                         "nodeUuid": {
                           "type": "string"
                         },
-                        "property": {
+                        "output": {
                           "type": "string"
                         }
                       }
