fixed typo in API specs

--- a/services/director/src/director/director_api.yaml
+++ b/services/director/src/director/director_api.yaml
@@ -302,7 +302,7 @@ components:
             - bool
             - string
             - file-url
-            - folder-url]
+            - folder-url
           description: |
             The type of the port:
               * integer - An signed integer
