fixed port value may be nullable

--- a/services/director/src/director/director_api.yaml
+++ b/services/director/src/director/director_api.yaml
@@ -317,6 +317,7 @@ components:
           description: The value of the port. May be null if not yet defined.
           type: string
           example: "null"
+          nullable: true
       required: 
         - key
         - label
