WIP #195:  - add schemas in all client-sdk configs (simcore_sdk.config.*)  - renamed schema.py to config.py and reduced number of submodules - adapted computational backend

--- a/services/web/server/config/server-host-test.yaml
+++ b/services/web/server/config/server-host-test.yaml
@@ -10,11 +10,12 @@ director:
   host: localhost
   port: 8001
 postgres:
-  database: tes_db
+  database: test_db
   user: test_user
   password: test_pass
   host: localhost
   port: 5432
+  # DEPRECATE OR add postgresql+psycopg2:// otherwise will fail sqlalchemy.exc.ArgumentError: Could not parse rfc1738 URL from string 'localhost:5432'
   endpoint: localhost:5432
 rabbit:
   channels:
