--- a/services/web/server/config/server-defaults.yaml
+++ b/services/web/server/config/server-defaults.yaml
@@ -30,7 +30,7 @@ rabbit:
   password: simcore
   user: simcore
 s3:
-  access_key: '12345678'
+  access_key: 'Q3AM3UQ867SPQQA43P2F'
   bucket_name: simcore
-  endpoint: minio:9000
-  secret_key: '12345678'
+  endpoint: play.minio.io:9000
+  secret_key: 'zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG'
