WIP #195:  fixing connection to rabbit  -  adapting fixtures to influence environment variables upon startup  - extended config.rabbit

--- a/services/web/server/tests/mock/docker-compose.yml
+++ b/services/web/server/tests/mock/docker-compose.yml
@@ -12,3 +12,10 @@ services:
       - 18080:8080
     depends_on:
       - db
+  rabbit:
+    image: rabbitmq:3-management
+    environment:
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER}
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASSWORD}
+    ports:
+      - "15672:15672"
