--- a/services/web/server/config/server-host-test.yaml
+++ b/services/web/server/config/server-host-test.yaml
@@ -14,15 +14,15 @@ postgres:
   user: test_user
   password: test_pass
   host: localhost
-  port: 5432
+  port: ${POSTGRES_PORT}
   # DEPRECATE OR add postgresql+psycopg2:// otherwise will fail sqlalchemy.exc.ArgumentError: Could not parse rfc1738 URL from string 'localhost:5432'
   endpoint: localhost:5432
 rabbit:
+  password: simcore
+  user: simcore
   channels:
     log: comp.backend.channels.log
     progress: comp.backend.channels.progress
-  password: simcore
-  user: simcore
 s3:
   access_key: '12345678'
   bucket_name: simcore
