WIP #195: fixes test_api  - Fixed exposing ports in rabbit service  -  Added sleep to tmp solve IncompatibleProtocolError exception upon pika.connect

--- a/services/web/server/config/server-defaults.yaml
+++ b/services/web/server/config/server-defaults.yaml
@@ -6,6 +6,7 @@ app:
   port: 8080
   testing: true
 cs_s4l:
+  # cs_s4l might not be necessary anymore!
   host: 172.16.9.89
   app:
     port: 9095
