small fix in project schema

--- a/services/web/client/source/resource/qxapp/project-v0.0.1.json
+++ b/services/web/client/source/resource/qxapp/project-v0.0.1.json
@@ -121,7 +121,7 @@
                       "additionalProperties": false,
                       "required": [
                         "nodeUuid",
-                        "property"
+                        "output"
                       ],
                       "properties": {
                         "nodeUuid": {
